Modify stdio import to work with dynamic linking on non dev systems

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,17 +78,9 @@ jobs:
       id: meson_install
       run: pip install scikit-build ninja meson
 
-    - name: Meson setup(${{ matrix.os-name }})
+    - name: Meson setup
       id: meson_setup
-      if: ${{ matrix.os-name != 'macos' }}
       run: meson setup builddir/
-      env:
-        CC: gcc
-
-    - name: Meson setup(macos)
-      id: meson_macos_setup
-      if: ${{ matrix.os-name == 'macos' }}
-      run: meson setup builddir/ -Ddynamic=true
       env:
         CC: gcc
 
