--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,11 @@
 if get_option('dynamic')
-  executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'])
+  exe = executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'])
 else
-  executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'], cpp_args : ['-static', '-static-libgcc', '-static-libstdc++'], link_args: ['-static', '-static-libgcc', '-static-libstdc++'])
+  exe = executable('hex-to-image', ['hex-to-image.cpp', 'stb_image_write.h'], cpp_args : ['-static', '-static-libgcc', '-static-libstdc++'], link_args: ['-static', '-static-libgcc', '-static-libstdc++'])
 endif
+
+hello_world_in = join_paths(join_paths(meson.source_root(), 'test'), 'hello-world.txt')
+test('hello world test(3 digits)', exe, args: ['-d', '3', '-i', hello_world_in, '-o', 'hello-world.png', '--override'])
+
+test_in = join_paths(join_paths(meson.source_root(), 'test'), 'test.txt')
+test('test test(3 digits)', exe, args: ['-i', test_in, '-o', 'test.png', '--override'])
