--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,14 +102,14 @@ jobs:
       uses: actions/upload-artifact@v2
       if: ${{ matrix.os-name != 'windows' }}
       with:
-        name: meson_testlog_${{ matrix.os-name }}
+        name: binary_${{ matrix.os-name }}
         path: builddir/src/hex-to-image
 
     - name: Upload Binary(Windows)
       uses: actions/upload-artifact@v2
       if: ${{ matrix.os-name == 'windows' }}
       with:
-        name: meson_testlog_${{ matrix.os-name }}
+        name: binary_${{ matrix.os-name }}
         path: builddir/src/hex-to-image.exe
 
     - name: Upload Test Log
